fix: gradle improve customers